--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       <canvas class="future"></canvas>
     </main>
 
-    <script src="js/vendor/easeljs-0.8.2.min.js"></script>
-    <script src="js/vendor/tweenjs-0.6.2.min.js"></script>
-    <script src="js/bundle.js"></script>
+    <script src="/js/vendor/easeljs-0.8.2.min.js"></script>
+    <script src="/js/vendor/tweenjs-0.6.2.min.js"></script>
+    <script src="/js/bundle.js"></script>
   </body>
 </html>
