--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="https://github.com/yuheiy">GitHub</a>
               </li>
               <li>
-                <a href="https://twitter.com/yuhei95">Twitter</a>
+                <a href="https://twitter.com/_yuheiy">Twitter</a>
               </li>
             </ul>
           </nav>
