--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Yuhei Yasuda</title>
     <meta name="description" content="I'm Yuhei Yasuda. I create the Future of the front-end in websites.">
     <link rel="stylesheet" href="/css/style.css">
+    <link class="js-load-css" href="/css/junge.css">
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
